--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -88,6 +88,13 @@ main {
       }
     }
 
+    .info,
+    .about {
+      .primary-title {
+        max-width: 30rem;
+      }
+    }
+
     .list {
       .primary-title {
         background-color: transparent;
