--- a/scss/globals/_globals.scss
+++ b/scss/globals/_globals.scss
@@ -28,7 +28,6 @@ body {
 
 .primary-title {
   color: $clr-primary-dark;
-  max-width: 32rem;
 }
 
 .flow > * + * {
