--- a/scss/globals/_mixins.scss
+++ b/scss/globals/_mixins.scss
@@ -10,7 +10,7 @@
   flex-direction: $direction;
 }
 
-@mixin wrapper($padding-inline: 1rem, $max-width: 80em) {
+@mixin wrapper($padding-inline: 1rem, $max-width: 75em) {
   padding-inline: $padding-inline;
   max-width: $max-width;
   margin-inline: auto;
